fix styling on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 .title {
-  margin:75px 0;
+  margin:4em 0;
 }
 
 .title h1 {
@@ -24,7 +24,7 @@ body {
   font-family:'Lobster Two', cursive;
   font-size:72px;
   margin-left:50%;
-  padding:100px;
+  padding: 100px;
   transform:translateX(-50%);
 }
 
@@ -67,5 +67,26 @@ a {
 }
 
 body > * {
-  width:500px;
+  max-width:500px;
+}
+
+@media(max-width: 600px) {
+  .title {
+    width: 100%;
+    margin: -50px -50px 2em;
+    max-width: none;
+  }
+
+  .title h1 {
+    border-radius: 0;
+    width: 100%;
+    text-align: center;
+    padding: 100px 100px 50px;
+  }
+
+  p {
+    font-size: 18px;
+    line-height: 1.2;
+    margin: .25em 1.0em;
+  }
 }
